# aigit

./: .aigit.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
dashboard/: package.json  tsconfig.json
dashboard/public/: data.example.json  index.html  styles.css
dashboard/src/: main.ts
dashboard/src/components/: app.ts  detail-drawer.ts  kpi-card.ts  line-chart.ts  topbar.ts  user-table.ts
dashboard/src/core/: datasource.ts  selectors.ts  store.ts  types.ts
dashboard/src/ui/: shadow.ts
docs/: aigit.adoc
scripts/: install.sh
src/: app.rs  cli.rs  codex_cli.rs  config.rs  examiner.rs  git.rs  main.rs  redact.rs  transcript.rs
src/commands/: commit.rs  common.rs  config.rs  dashboard.rs  exam.rs  install_hook.rs  mod.rs  policy.rs  verify.rs
tests/: integration.rs
