[package]
name = "aigit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
shlex = "1.3.0"
tempfile = "3.10"
toml = "0.8"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
